The whole text in target JPasswordField image are not selected.

XMLWordPrintable

    • b14
    • x86
    • linux

        Testsuite name: Swing manual
        Test name(s):Swing_AllComponents/Manual/LAFTests/JPasswordFieldLAFTest
        Product(s) tested: JDK8u202 b04(64bit)
        OS/architecture:Oel7.5 uek x64
        Test Tool: tonga-4.0.2-rc2.jar
        Options:-Djdk.gtk.version=3 -Djdk.gtk.verbose=true

        Actual behavior:
        1) S.no7:The whole text in target JPasswordField image are not selected.Refer to keyBoardOPPField.png
        2) And there is no such issue without Options.

        Afect case:
        Swing_AllComponents/Manual/LAFTests/JPasswordFieldLAFTest: S.No3
        Swing_AllComponents/Manual/LAFTests/JTextFieldLAFTest: S.No3 7 S.No7
        Swing_AllComponents/Manual/LAFTests/JSpinnerLAFTest: S.No3 & S.No4 & S.No7

          1. keyBoardOPPField.png
            53 kB
            Paul Wu
          2. JSpinnerLAFTest_sno1.png
            110 kB
            Paul Wu
          3. JPasswordFieldDemo.java
            0.6 kB
            Aleksey Shipilev

              Assignee:
              Pankaj Bansal (Inactive)
              Reporter:
              Paul Wu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: