8214112: The whole text in target JPasswordField image are not selected

Reviewed-by: serb, psadhukhan